k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 8080
    protocol: TCP
