k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: ingress-host
spec:
  rules:
  - host: "ingress.fulcycle.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goservice-service
            port: 
              number: 8080
